# xml-utils

./: .gitignore  README.md  pyproject.toml
utils/: file_reader.py  iterate.py  timestamp.py  write_file.py
xml_utils/: cli.py  count_c_field.py  count_m_field.py  file_reader.py  main.py  vers.py  xpath.py
